<resources>
    <string name="app_name">E Commerce Layout Assignment</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="products">Products</string>
    <string name="home">Home</string>
    <string name="string">รายการสินค้า</string>
    <string name="รายการสินค้า" />
    <string name="หน้าหลัก" />
    <string name="รายการโปรด" />
    <string name="โปรไฟล์" />
    <string name="ตะกร้าสินค้า" />
    <string name="main">หน้าหลัก</string>
    <string name="product">รายการสินค้า</string>
    <string name="carts">ตะกร้าสินค้า</string>
    <string name="profiles">โปรไฟล์</string>
    <string name="favorite">รายการโปรด</string>
    <string name="promation">โปรโมชั่นที่น่าสนใจ</string>
    <string name="suggest">สินค้าแนะนำ</string>
    <string name="promotion">โปรโมชั่นที่น่าสนใจ</string>
    <string name="suggests">สินค้าแนะนำ</string>
    <string name="todo">TODO</string>
    <string name="type">หมวดหมู่สินค้า</string>
    <string name="pen">อุปกรณ์เครื่องเขียน</string>
    <string name="sport">อุปกรณ์กีฬา</string>
    <string name="gadget">Gadget</string>
    <string name="cloths">เสื้อผ้า</string>
    <string name="selected">รายการสินค้าที่เลือก</string>
    <string name="purchase">ชำระเงิน</string>
    <string name="john_doe_example_com">อีเมล์: john.doe@example.com</string>
    <string name="john_doe">ชื่อ: John Doe</string>
    <string name="_123_main_st_city">สถานที่จัดส่ง: 123 Main St, City</string>
    <string name="todos">TODO</string>
    <string name="fav">รายการโปรดของคุณ</string>
</resources>