<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/main" />

        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_products"
            android:title="@string/product" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/carts" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profiles" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorites"
            android:title="@string/favorite" />
    </group>
</menu>
