<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/light_gray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:padding="8dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/blue"
        android:padding="8dp"
        android:text="@string/pen"
        android:textColor="@color/black" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sport"
        android:background="@color/green"
        android:textColor="@color/black"
        android:padding="8dp"
        android:layout_marginTop="8dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/gadget"
        android:background="@color/orange"
        android:textColor="@color/black"
        android:padding="8dp"
        android:layout_marginTop="8dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/cloths"
        android:background="@color/red"
        android:textColor="@color/black"
        android:padding="8dp"
        android:layout_marginTop="8dp" />
</LinearLayout>
