<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/light_gray">

    <!-- รูปภาพโปรไฟล์ -->
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/todos"
        android:src="@mipmap/ic_launcher_round"
        android:scaleType="centerCrop"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circle_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/john_doe"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingBottom="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/john_doe_example_com"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:paddingBottom="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_123_main_st_city"
        android:textSize="16sp"
        android:textColor="@color/black" />
</LinearLayout>